--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,8 @@
 apply plugin: 'com.android.application'
 
-apply plugin: 'android-apt'
-def AAVersion = '3.3.1'
-
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 27
+    buildToolsVersion '28.0.1'
 
     defaultConfig {
         applicationId "com.ly.cc"
@@ -22,12 +19,6 @@ android {
         }
     }
 
-    // java版本
-    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_8
-//        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
     lintOptions {
         abortOnError false
     }
@@ -41,58 +32,35 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('libs/android-support-v7-cardview.jar')
-    compile files('libs/android-support-v7-recyclerview.jar')
-    compile files('libs/faceppsdk.jar')
-    compile files('libs/libammsdk.jar')
-    compile files('libs/Android_Location_V1.3.2.jar')
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'se.emilsjolander:stickylistheaders:2.5.1'
-    compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.nineoldandroids:library:2.4.0+'
-    compile 'com.facebook.rebound:rebound:0.3.+'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'de.greenrobot:eventbus:2.4.0'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
-    compile 'me.zhanghai.android.materialprogressbar:library:1.0.2'
-    apt "org.androidannotations:androidannotations:$AAVersion"
-    compile "org.androidannotations:androidannotations-api:$AAVersion"
-
-    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
-
-    compile 'com.ogaclejapan.smarttablayout:library:1.2.1@aar'
-//    //Optional: see how to use the utility.
-    compile 'com.ogaclejapan.smarttablayout:utils-v4:1.2.1@aar'
-//    //Optional: see how to use the utility.
-//    compile 'com.ogaclejapan.smarttablayout:utils-v13:1.2.1@aar'
-
-    compile 'io.reactivex:rxandroid:0.25.0'
-
-    compile 'cat.ereza:customactivityoncrash:1.2.0'
-}
-
-apt {
-    arguments {
-        //androidManifestFile variant.processResources.manifestFile
-        androidManifestFile variant.outputs[0].processResources.manifestFile
-        resourcePackageName 'com.ly.cc'
-    }
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation files('libs/android-support-v7-cardview.jar')
+    implementation files('libs/android-support-v7-recyclerview.jar')
+    implementation files('libs/faceppsdk.jar')
+    implementation files('libs/libammsdk.jar')
+    implementation files('libs/Android_Location_V1.3.2.jar')
+    implementation 'se.emilsjolander:stickylistheaders:2.5.1'
+    implementation 'com.nineoldandroids:library:2.4.0+'
+    implementation 'com.facebook.rebound:rebound:0.3.+'
+    implementation 'com.google.code.gson:gson:2.3.1'
+    implementation 'de.greenrobot:eventbus:2.4.0'
+    implementation 'com.squareup.retrofit:retrofit:1.9.0'
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.0.2'
+    implementation 'com.github.navasmdc:MaterialDesign:1.5@aar'
+    implementation 'com.ogaclejapan.smarttablayout:library:1.2.1@aar'
+    implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.2.1@aar'
+    implementation 'io.reactivex:rxandroid:0.25.0'
+    implementation 'cat.ereza:customactivityoncrash:1.2.0'
 }
 
 buildscript {
     repositories {
         mavenCentral()
     }
-
-    dependencies {
-        classpath 'me.tatarka:gradle-retrolambda:3.2.0'
-    }
 }
 
-apply plugin: 'com.android.application' //or apply plugin: 'java'
-apply plugin: 'me.tatarka.retrolambda'
+
+
 
 android {
     compileOptions {
